--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
+    "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
     "react-dropzone": "^6.0.2",
     "react-image-mapper": "0.0.8",
