--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "jspdf": "^1.4.1",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
