--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "jspdf": "^1.4.1",
+    "docx": "^4.2.0",
+    "file-saver": "^2.0.0-rc.3",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
