--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "docx": "^4.2.0",
+    "docxtemplater": "^3.9.1",
     "file-saver": "^2.0.0-rc.3",
+    "jszip": "^2.6.1",
+    "jszip-utils": "0.0.2",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
