--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jszip": "^2.6.1",
     "jszip-utils": "0.0.2",
     "open-docxtemplater-image-module": "^1.0.3",
+    "promise-file-reader": "^1.0.2",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
