--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /.idea/jsLibraryMappings.xml
-/.idea/
+/.idea/workspace.xml
+/.idea
 ~$port_template.docx
